tests/pyconverter-test/errors/global_before_statement.py
a = 3

def whatever():
    a = 9
    global a # 9522
    if True:
        a = 2
    else:
        a = 3